# piper_arm_inspire_hand_bringup

./: CMakeLists.txt  README.md  package.xml
config/controller/: agilex_piper_cartesian_motion_controller.yaml  agilex_piper_gpio_controller.yaml  agilex_piper_joint_position_controller.yaml  agilex_piper_joint_trajectory_controller.yaml  controller_manager.yaml  controller_manager_mock.yaml  inspire_rh56_hand_joint_position_controller.yaml
config/foxglove/: arm_hand_ros2_control.json  display_robot.json
launch/: display_foxglove.launch.py  piper_arm_inspire_hand.launch.py  piper_arm_inspire_hand_cartesian.launch.py  piper_arm_inspire_hand_native_cartesian.launch.py
urdf/: flange_macro.xacro  piper_arm_inspire_hand_left.urdf.xacro  piper_arm_inspire_hand_right.urdf.xacro
